--- a/config.js.example
+++ b/config.js.example
@@ -1,7 +1,7 @@
 export default {
   "host": "0.0.0.0",
-  "port": 2011,
-  "discordWebhookUrl": "",
+  "port": 8080,
+  "discordWebhookUrl": "https://discord.com/api/webhooks/123151413/asdsad",
   "keyLength": 10,
   "maxLength": 400000,
   "staticMaxAge": 86400,
