--- a/package.json
+++ b/package.json
@@ -14,16 +14,25 @@
   },
   "main": "haste",
   "dependencies": {
+    "@google-cloud/datastore": "^9.2.1",
+    "aws-sdk": "^2.1692.0",
     "busboy": "0.2.4",
     "connect": "^3.7.0",
     "connect-ratelimit": "0.0.7",
     "connect-route": "0.1.5",
-    "pg": "^8.0.0",
-    "redis": "0.8.1",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.7",
+    "memcached": "^2.2.2",
+    "mongodb": "^6.12.0",
+    "node-fetch": "^3.3.2",
+    "pg": "^8.13.1",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
+    "redis": "^0.8.1",
     "redis-url": "0.1.0",
+    "rethinkdbdash": "^2.3.31",
     "st": "^2.0.0",
-    "uglify-js": "3.1.6",
-    "winston": "^2.0.0"
+    "uglify-js": "3.1.6"
   },
   "devDependencies": {
     "mocha": "^8.1.3"
@@ -43,5 +52,6 @@
   "scripts": {
     "start": "node server.js",
     "test": "mocha --recursive"
-  }
+  },
+  "bundleDependencies": []
 }
